fix(ui): incorrect background color for the left sidebar on mobile #10572

--- a/src/main/frontend/components/container.css
+++ b/src/main/frontend/components/container.css
@@ -80,7 +80,7 @@
 }
 
 .dark .left-sidebar-inner {
-  background-color: or(--ls-left-sidebar-background-color, --lx-gray-01, --ls-primary-background);
+  background-color: or(--ls-left-sidebar-background-color, --lx-gray-01, --ls-primary-background-color);
 }
 
 .left-sidebar-inner {
